--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,8 +18,8 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
-      <th>Rating</th>
+      <th class="bg-warning"><%=link_to "Movie Title", movies_path(sort_by: :title, sort_type: :asc, ratings_to_show: "#{@ratings_to_show}"), id: "title_header" %></th>
+      <th class="hilite"><%=link_to "Rating", movies_path(sort_by: :release_date, sort_type: :asc, ratings_to_show: "#{@ratings_to_show}"), id: "release_date_header" %></th>
       <th>Release Date</th>
       <th>More Info</th>
     </tr>
